--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -398,7 +398,7 @@
     <div class="container">
         <!-- The rest of your HTML content goes here -->
         <div class="header">
-            <div class="profile-pic" style="background-image: url('images/profile-pic.jpg');"></div>
+            <div class="profile-pic" style="background-image: url('images/wes.jpg');"></div>
         </div>
 
         <!-- Placeholder for your name -->
@@ -439,7 +439,7 @@
 
         <!-- Footer Section -->
         <div class="footer">
-            <p>Portfolio published during the Smart Contracts Code Camp by <span>DEVCON</span> and <span>ICP PH</span> at DEVCON Mindanao Codecamps, University of Science and Technology of Southern philippines.<br><br>
+            <p>Portfolio published during the Smart Contracts Code Camp by <span>DEVCON</span> and <span>ICP PH</span> at Hack the North Debug 4, Northern philippines.<br><br>
             ICP offers a groundbreaking platform for building smart contract projects using your existing expertise in ExpressJS, NextJS, and SQLite.<br>
             This innovative approach leverages canister technology, a new paradigm for smart contracts, to empower developers to create next-generation<br>
             applications. Explore the future of blockchain development with ICP. Visit <a href="https://islacamp.ph/">https://islacamp.ph/</a> to learn more!</p>
