--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -403,14 +403,14 @@
 
         <!-- Placeholder for your name -->
         <h1>Wesly Ivan P. Gaffud</h1>
-        <p class="description">I am an graphics design, photographer and also afront-end developer</p>
+        <p class="description">Leanred and Innovator</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>DEVCON Affiliations</h3>
+            <h3>Hack the North Mente</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
+                <li>PITON President - 2024</li>
                 <li>DEVCON Code Camps Core Team - 2025</li>
                 <li>Former DEVCON Vice President for Student Engagement - 2024</li>
                 <li>Former Campus DEVCON Ambassador - 2024</li>
@@ -439,10 +439,7 @@
 
         <!-- Footer Section -->
         <div class="footer">
-            <p>Portfolio published during the Smart Contracts Code Camp by <span>DEVCON</span> and <span>ICP PH</span> at Hack the North Debug 4, Northern philippines.<br><br>
-            ICP offers a groundbreaking platform for building smart contract projects using your existing expertise in ExpressJS, NextJS, and SQLite.<br>
-            This innovative approach leverages canister technology, a new paradigm for smart contracts, to empower developers to create next-generation<br>
-            applications. Explore the future of blockchain development with ICP. Visit <a href="https://islacamp.ph/">https://islacamp.ph/</a> to learn more!</p>
+           
 
             <!-- About ICP -->
             <div class="landing-page">
