--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -411,8 +411,8 @@
             <h3>Hack the North Mente</h3>
             <ul>
                 <li>PITON President - 2024</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
+                <li>HACK THE NORTH DEBUG 4</li>
+                <li>SBO PRESIDENT ISU-I</li>
                 <li>Former Campus DEVCON Ambassador - 2024</li>
             </ul>
 
@@ -427,9 +427,9 @@
 
         <!-- Centered Links -->
         <div class="links">
-            <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
+            <a href="www.linkedin.com/in/gaffud-wesly-ivan-p-8b7a14292/"><i class="fab fa-linkedin"></i>LinkedIn</a>
             <a href="https://github.com/yhnalx"><i class="fab fa-github"></i>GitHub</a>
-            <a href="https://www.facebook.com/yhnalx"><i class="fab fa-facebook"></i>Facebook</a>
+            <a href="https://www.facebook.com/weslyivan.gaffud.1"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
 
         <div class="visitor-count">
