--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -403,7 +403,7 @@
 
         <!-- Placeholder for your name -->
         <h1>Wesly Ivan P. Gaffud</h1>
-        <p class="description">Leanred and Innovator</p>
+        <p class="description">Learned and Inspire</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
